prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/var_scope_4.diag.txt
ERROR: Unknown variable [x]
testData/diagnostics/var_scope_4.nut:8:10

  case 1:
    print(x);
          ^
    break;


